--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <li>Filomena Felícia Fausta Fonseca, famosa flor, farmacêutica fez formidáveis fórmulas, fabricou formosos fortificantes e famosos fertilizantes, fazendo felizes frenéticos fregueses.</li>
   <li>Um veterano da vida, vestido com vestes de vítima, e vilão pelas vicissitudes da verdade, este semblante não vê verniz de vaidade é um vestígio do vosso povo, vazio e esvaecido, porém essa valorosa visitação de uma vexação passada se encontra vivificada e fez um voto de vencer os vermes virais e violentos que valorizam a violação da vontade.</li>
         </ul>
-<a class="btn-jogo" href="https://matheussouzaz.github.io/AcheObotao/" target="_blank">Vamos Jogar um <strong>Jogo</strong>?</a>
+<a class="btn-jogo" href="https://matheussouzaz.github.io/AcheObotao/" target="_blank">Vamos <em>Jogar</em> um <strong>Jogo</strong>?</a>
     </div>
 
     <script src="./src/js/zueira.js"></script>
